--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ openpyxl = "^3.1.5"
 python-dotenv = "^1.0.1"
 pytest = "^8.3.4"
 pytest-mock = "^3.14.0"
+freezegun = "^1.5.1"
 
 
 [tool.poetry.group.lint.dependencies]
